--- a/index.html
+++ b/index.html
@@ -51,27 +51,7 @@
         </div>
       </nav>
     </section>
-    <section class="mx-auto">
-      <div class="card mx-auto" style="max-width: 720px">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="..." />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <section class="mx-auto" id="newsCard">
     </section>
     <script src="js/newsData.js"></script>
     <script
