--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/blog.html">blog</a>
               </li>
             </ul>
           </div>
