news number shown done

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                 </div>
             </div>
     </section>
+    <section>
+      <div class="alert alert-success">
+        <p id="newsNumber" class=""></p>
+      </div>
+    </section>
     <section class="mx-auto" id="newsCard">
     </section>
     
