--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
   <body>
     <section>
       <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
+        <div class="container-fluid  text-bg-warning">
           <a class="navbar-brand" onClick="window.location.reload()">Latest News</a>
           <button
             class="navbar-toggler"
@@ -28,7 +28,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
